# PixelPuzzle

./: CMakeLists.txt  README.md  gallery.cpp  gallery.h  main.cpp  mainwindow.cpp  mainwindow.h  picture.cpp  picture.h
